# rush

./: Cargo.toml  README.md  rush.toml
src/: cli.rs  config.rs  main.rs  util.rs
src/info/: bar.rs  cpu.rs  gpu.rs  memory.rs  mod.rs  os.rs  packages.rs  wm.rs  x.rs
