[package]
name = "rush-bin"
description = "rust fetch = rush"
license = "MIT"
license-file = "LICENSE"
documentation = "https://github.com/diced/rush"
homepage = "https://github.com/diced/rush"
repository = "https://github.com/diced/rush.git"
version = "0.1.0"
authors = ["diced <pranaco2@gmail.com>"]
edition = "2018"
[[bin]]
name = "rush"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
procfs = "0.9.1"
regex = "1.4.2"
prettytable-rs = "^0.8"
toml = "0.5.8"
serde_derive = "1.0"
serde = "1.0.97"
xdg = "2.2.0"

[profile.release]
codegen-units = 1
debug = false
incremental = false
opt-level = 3
panic = "abort"
lto = true